# mpf-monorepo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.local.json
host/: CMakeLists.txt
host/include/: application.h  cross_dll_safety.h  navigation_service.h
host/qml/: Main.qml
host/src/: application.cpp  event_bus_service.cpp  main.cpp  menu_service.cpp  navigation_service.cpp  settings_service.cpp  theme_service.cpp
http-client/: CMakeLists.txt
plugins/orders/: CMakeLists.txt
plugins/rules/: CMakeLists.txt
plugins/rules/qml/: OrdersPage.qml
plugins/rules/src/: rules_plugin.cpp
sdk/: CMakeLists.txt
ui-components/: CMakeLists.txt
